application/brennoflavio/mail/autodiscover-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: autodiscover
  namespace: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autodiscover
  template:
    metadata:
      labels:
        app: autodiscover
    spec:
      containers:
        - name: autodiscover
          image: monogramm/autodiscover-email-settings:66c144e
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 80Mi
            requests:
              cpu: 10m
              memory: 80Mi
          ports:
            - containerPort: 8000
