application/brennoflavio/mail/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mail
  namespace: mail
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: >-
      'mailserver' needs to run as root
    ignore-check.kube-linter.io/privileged-ports: >-
      'mailserver' needs privileged ports
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      There are too many files written to make the root FS read-only
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
      annotations:
        container.apparmor.security.beta.kubernetes.io/mail: runtime/default
    spec:
      hostname: mail
      containers:
        - name: mail
          image: ghcr.io/docker-mailserver/docker-mailserver:16.0.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
            privileged: false
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - MKNOD
                - SETGID
                - SETUID
                - DAC_OVERRIDE
                - NET_ADMIN
                - NET_RAW
                - NET_BIND_SERVICE
                - SYS_CHROOT
                - KILL
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: 2048Mi
            requests:
              memory: 2048Mi
              cpu: 50m
          volumeMounts:
            - name: mail
              subPath: docker-mailserver
              mountPath: /tmp/docker-mailserver
            - name: mail
              mountPath: /var/mail
              subPath: data
            - name: mail
              mountPath: /var/mail-state
              subPath: state
            - name: mail
              mountPath: /var/log/mail
              subPath: log
            - name: mail-certificate
              mountPath: /tmp/dms/custom-certs
              readOnly: true
            - name: dovecot-configs
              mountPath: /etc/dovecot/conf.d/15-mailboxes.conf
              subPath: 15-mailboxes.conf
              readOnly: true
            - name: dovecot-configs
              mountPath: /etc/dovecot/conf.d/90-fts-solr.conf
              subPath: 90-fts-solr.conf
              readOnly: true
          ports:
            - containerPort: 25
              hostPort: 25
              protocol: TCP
            - containerPort: 465
              hostPort: 465
              protocol: TCP
            - containerPort: 587
              hostPort: 587
            - containerPort: 993
              hostPort: 993
              protocol: TCP
            - containerPort: 110
              hostPort: 110
              protocol: TCP
            - containerPort: 995
              hostPort: 995
              protocol: TCP
            - containerPort: 143
              hostPort: 143
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: mail
          persistentVolumeClaim:
            claimName: mail
        - name: mail-certificate
          secret:
            secretName: mail-tls
        - name: dovecot-configs
          configMap:
            name: dovecot-configs
