application/brennoflavio/mail/solr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: solr
  namespace: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  template:
    metadata:
      labels:
        app: solr
    spec:
      containers:
        - name: solr
          image: solr:9.10.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 4352Mi
            requests:
              cpu: 10m
              memory: 4352Mi
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr
              mountPath: /var/solr
      volumes:
        - name: solr
          persistentVolumeClaim:
            claimName: solr
