application/brennoflavio/mail/autodiscover-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autodiscover
  namespace: mail
spec:
  selector:
    app: autodiscover
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
