application/brennoflavio/mail/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: mail
spec:
  selector:
    app: solr
  ports:
    - protocol: TCP
      port: 8983
      targetPort: 8983
  type: ClusterIP
