application/brennoflavio/mail/autoconfig-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoconfig
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
spec:
  ingressClassName: external-nginx
  rules:
  - host: autoconfig.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autodiscover
            port:
              number: 8000
  tls:
  - hosts:
    - autoconfig.brennoflavio.com.br
    secretName: autoconfig-tls
